--- a/public/www/Gemfile
+++ b/public/www/Gemfile
@@ -1,11 +1,11 @@
-source 'http://ruby.taobao.org'
+source 'https://rubygems.org'
 
 gem 'haml'
 gem 'thor'
-gem 'jt-partial', "1.0.1"
-gem 'moode-haml-toolkit', "1.0.4"
+gem 'jt-partial', "1.0.3"
+gem 'moode-haml-toolkit', "1.1.6"
 gem 'Rwebserver'
 
-# legacy
-gem 'moode-haml-jqm'
+gem 'moode-haml-component-angular', "0.0.3"
+
 
